# rust

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: onPush.yaml
docker/: .env  docker-compose.yaml
docker/pulsar/: docker-compose.yaml
docker/pulsar-manager/: docker-compose.yaml
docker/pulsar-standalone/: docker-compose.yaml
docker/pulsar/data/manager/: application.properties
src/: lib.rs
src/core/: base_payload.rs  command.rs  command_handler.rs  mod.rs
src/domain/: decider.rs  domain_event.rs  mod.rs  repository.rs  with_identifier.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: database.rs  database_error.rs  database_query.rs  executable.rs  in_memory_database.rs
src/infrastructure/database/implementations/: in_memory_database.rs
src/infrastructure/event_bus/: event_producer.rs  in_memory_event_producer.rs  mod.rs
src/infrastructure/event_store/: event_store.rs  in_memory_event_store.rs  mod.rs  stored_event.rs  stream_key.rs
tests/: database_query_test.rs  mongodb_command_flow_test.rs  mongodb_event_store_test.rs
tests/common/: create_user_command_handler.rs  mod.rs  mongodb_event_store.rs  user.rs  user_command.rs  user_created_event.rs  user_decider.rs  user_event.rs  user_repository.rs
