[package]
name = "arts-and-crafts_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["sync", "rt"] }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt", "test-util"] }
futures = "0.3.31"
rstest = "0.26.1"
chrono = "0.4.42"
mongodb = "3.3.0"
dotenvy = "0.15.7"

[dependencies.uuid]
version = "1.18.1"
features = ["v7", "serde"]
