[package]
name = "arts-n-crafts"
description = "Arts and Crafts was a reaction against the industrialization and excess of the Victorian era, and it sought to celebrate traditional craftsmanship and materials. Arts and Crafts architecture is characterized by a simple and functional design, the use of natural materials, and a focus on craftsmanship."
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/arts-n-crafts/rust"

[package.metadata.scripts]
fmt = "cargo fmt --all -- --check"
fmt-fix = "cargo fmt --all"
lint = "cargo clippy --all-targets --all-features"
test = "cargo nextest run --workspace --retries 2"
test-integration = "cargo nextest run --workspace --retries 2 -- --ignored integration"
coverage = "cargo llvm-cov nextest --workspace --fail-under-functions 100 --fail-under-lines 100 --fail-under-regions 100 --show-missing-lines"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["sync", "rt"] }
async-trait = "0.1.89"
thiserror = "2.0.16"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt", "test-util"] }
futures = "0.3.31"
rstest = "0.26.1"
chrono = "0.4.42"
mongodb = "3.3.0"
dotenvy = "0.15.7"
strum_macros = "0.27.2"

[build-dependencies]
cargo-husky = "1"

[dependencies.uuid]
version = "1.18.1"
features = ["v7", "serde"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
